# financial-risk-agent-graph

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  compare_parsers.py  debug_env.py  demo_bank_analysis.py  main.py  pyproject.toml  test_popular_pdf.py
app/: __init__.py
app/agents/: __init__.py
app/api/: __init__.py  endpoints.py  models.py
app/core/: __init__.py  config.py  database.py  graph.py  state.py
app/tools/: browser_manager.py  credit_parser.py  facebook_scraper.py  instagram_scraper.py  labor_calculator.py  minimum_wage.py  ocr.py  osint_cache.py  osint_metrics.py  serpapi_client.py
app/utils/: retry.py  text_utils.py
docs/: README.md  logging-monitoring.md
docs/branding/: brand_identity_creditgraph_ai.md  identidad_de_marca_creditgraph_ai.md  refactoring_instructions_from_creditflow_ai_to_creditgraph_ai.md
docs/decisions/: 001-rebranding-to_creditgraph_ai.md  instagram-search-improvement.md
docs/implementation/: labor-calculator.md  osint-production-config.md  osint-search-accuracy-improvements.md  phase-1-foundation.md  phase-2-core-analysis.md  phase-5-osint.md  phase-6-irs-engine.md  phase-7-underwriter.md  status-report-2026-02-12.md
docs/planning/: future-enhancements.md  prd.md  (+1 more)
tests/: manual_osint_test.py  test_config.py  test_dvs_calculator.py  test_instagram.py  test_integration.py  test_irs_scoring.py  test_labor_calculator.py  test_real_user_irs.py  test_serpapi_client.py  test_social_scrapers.py  test_state.py  test_text_utils.py  test_transunion_service.py  test_triage.py  test_underwriter.py
(+30 files in other folders)
